[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-neops"
version = "0.1.0"
description = "A Docker container information display tool."
authors = [
  { name="Hograth Minestone", email="me@hograthm.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "docker",
    "termcolor",
    "pydantic"
]

[project.urls]
"Homepage" = "https://github.com/hograthm/docker-neops"
"Bug Tracker" = "https://github.com/hograthm/docker-neops/issues"

[project.scripts]
docker-neops = "docker_neops.main:main"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
